...

  Scaffold(
      modifier = Modifier.testTag("addRecipeScreen"),
      topBar = {
        CustomTopAppBar(
            onClick = { navigationActions.goBack() },
            title = stringResource(R.string.title_of_AddRecipeScreen),
            titleTestTag = "addRecipeTitle")
      },
      content = { paddingValues -> // New content parameter
...
                        Modifier.fillMaxWidth()
                            .padding(vertical = 10.dp)
                            .testTag("inputRecipeTitle"))
              }

...
              item {
                ErrorTextBoxNEW(
                    addRecipeViewModel.titleError.collectAsState().value, "titleErrorMessage")
              }

...
                        Modifier.fillMaxWidth()
                            .padding(vertical = 10.dp)
                            .testTag("inputRecipeServings"))
              }

...
              item {
                ErrorTextBoxNEW(
                    addRecipeViewModel.servingsError.collectAsState().value, "servingsErrorMessage")
              }

...
                        Modifier.fillMaxWidth()
                            .padding(vertical = 10.dp)
                            .testTag("inputRecipeTime"))
              }

...
              item {
                ErrorTextBoxNEW(
                    addRecipeViewModel.timeError.collectAsState().value, "timeErrorMessage")
              }

...
                  Text(
                      text = stringResource(R.string.ingredients),
                      modifier = Modifier.testTag("ingredientSection"))
                }
              }
...
                Button(
                    onClick = { addRecipeViewModel.createNewIngredient() },
                    modifier = Modifier.height(40.dp).testTag("addIngredientButton"),
                    content = {
                      Icon(imageVector = Icons.Default.Add, contentDescription = "Add Ingredient")
...
                  Text(
                      text = stringResource(R.string.instructions),
                      modifier = Modifier.testTag("instructionSection"))
                }
              }
...
                Button(
                    onClick = { addRecipeViewModel.createNewInstruction() },
                    modifier = Modifier.height(40.dp).testTag("addInstructionButton"),
                    content = {
                      Icon(imageVector = Icons.Default.Add, contentDescription = "Add Instruction")
...
                CustomButtons(
                    button1OnClick = { navigationActions.goBack() },
                    button1TestTag = "cancelButton",
                    button1Text = stringResource(R.string.cancel_button),
                    button2OnClick = {
...
                      navigationActions.goBack()
                    },
                    button2TestTag = "addButton",
                    button2Text = stringResource(R.string.add_button))
              }
...
        },
        label = { Text(stringResource(R.string.instruction_step, index + 1)) },
        modifier = Modifier.weight(1f).testTag("inputRecipeInstruction"))
    IconButton(
        onClick = { addRecipeViewModel.removeInstruction(index) },
        modifier = Modifier.testTag("deleteInstructionButton")) {
          Icon(imageVector = Icons.Default.Delete, contentDescription = "Delete Step")
        }
...
  // Display error message if needed
  ErrorTextBoxNEW(
      addRecipeViewModel.instructionError.collectAsState().value[index], "instructionErrorMessage")
}

...
                UNITS.get(ingredient.quantity.unit)!!,
                ingredient.name),
        modifier = Modifier.testTag("ingredientItem"))
    // delete button
    IconButton(onClick = onRemoveClick, modifier = Modifier.testTag("deleteIngredientButton")) {
...

  androidx.compose.material3.AlertDialog(
      modifier = Modifier.testTag("instructionDialog"),
      onDismissRequest = { addRecipeViewModel.createNewIngredient() },
      title = { Text(stringResource(R.string.add_ingredient)) },
      text = {
        Column(modifier = Modifier.testTag("addIngredientPopUp")) {
          // ingredient name
          OutlinedTextField(
...
              onValueChange = { newName -> addRecipeViewModel.changeIngredientName(newName) },
              label = { Text(stringResource(R.string.ingredient_name)) },
              modifier = Modifier.fillMaxWidth().testTag("inputIngredientName"))
          // error message if ingredient name is empty
          ErrorTextBoxNEW(
              addRecipeViewModel.ingredientNameError.collectAsState().value,
              "ingredientNameErrorMessage")

          // ingredient quantity (it is a string but will be transformed later on)
...
              label = { Text(stringResource(R.string.ingredient_quantity)) },
              keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
              modifier = Modifier.fillMaxWidth().testTag("inputIngredientQuantity"))

          // error message if the ingredient quantity is empty
          ErrorTextBoxNEW(
              addRecipeViewModel.ingredientQuantityAmountError.collectAsState().value,
              "ingredientQuantityErrorMessage")

          Spacer(Modifier.padding(8.dp))
...
                onUnitExpandedChange = { addRecipeViewModel.changeUnitExpanded() },
                modifier = Modifier.weight(1f),
                testTag = "inputIngredientUnit")
          }
        }
...
              }
            },
            modifier = Modifier.testTag("addIngredientButton2"),
            colors =
                ButtonDefaults.buttonColors(
...
        Button(
            onClick = { addRecipeViewModel.closeIngredientDialog() },
            modifier = Modifier.testTag("cancelIngredientButton"),
            colors =
                ButtonDefaults.buttonColors(
...
